--- a/init.g2.rc
+++ b/init.g2.rc
@@ -366,6 +366,12 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
     user camera
     group camera system inet input
 
+#start GNSS/Sensor interface daemon
+service gsiff_daemon /system/bin/gsiff_daemon
+    class late_start
+    user gps
+    group gps net_raw misc
+
 service qseecomd /system/bin/qseecomd
     class late_start
     user root
@@ -375,8 +381,8 @@ service cnd /system/bin/cnd
     class late_start
     socket cnd stream 660 root inet
 
-service thermal-engine /system/bin/thermal-engine --time=20
-   class late_start
+service thermal-engine /system/bin/thermal-engine
+   class main
    user root
    group root
 
